--- a/src/mzmath/TargetedMetabolomics/TargetedMetabolomics.vbproj
+++ b/src/mzmath/TargetedMetabolomics/TargetedMetabolomics.vbproj
@@ -130,7 +130,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ContentUnits.vb" />
+    <Compile Include="QuantitativeAnalysis\ContentUnits.vb" />
     <Compile Include="GCMS\ChromatographyPeaktable.vb" />
     <Compile Include="GCMS\QuantifyAnalysis\ReferenceLibrary.vb" />
     <Compile Include="GCMS\QuantifyAnalysis\SIMMode.vb" />
