--- a/src/assembly/ProteoWizard.d/ProteoWizard.d.vbproj
+++ b/src/assembly/ProteoWizard.d/ProteoWizard.d.vbproj
@@ -128,6 +128,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MassWolf.vb" />
+    <Compile Include="ServerHelper.vb" />
     <Compile Include="VBServerScript.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
